--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
     
     <dependencies>
         <dependency>
+            <!-- advance report  selenium -->
+            <groupId>com.relevantcodes</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>2.40.1</version>
+        </dependency>
+        <!--dependency for safari-->
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>19.0</version>
